tests/enterprise/snapshots/lib__enterprise__preset_snapshot_test__snapshot_all_presets_have_default_route.snap
---
source: tests/enterprise/preset_snapshot_test.rs
assertion_line: 188
expression: results
---
[
    "perf: model=claude-sonnet-4-6 type=default",
    "ultra-cheap: model=default-model type=default",
    "eu-eco: model=default-model type=default",
    "eu-pro: model=default-model type=default",
    "eu-max: model=default-model type=default",
    "gdpr: model=eu-default type=default",
    "eu-ai-act: model=eu-default type=default",
]
