tests/enterprise/snapshots/lib__enterprise__preset_snapshot_test__snapshot_gdpr_presets_enforce_region.snap
---
source: tests/enterprise/preset_snapshot_test.rs
expression: results
---
[
    "gdpr: gdpr=true region=Some(\"eu\")",
    "eu-ai-act: gdpr=true region=Some(\"eu\")",
]
