tests/enterprise/snapshots/lib__enterprise__preset_snapshot_test__snapshot_thinking_routes_differ_from_default.snap
---
source: tests/enterprise/preset_snapshot_test.rs
expression: results
---
[
    "perf: default=default think=claude-opus-thinking differs=true",
    "medium: default=default think=claude-opus-thinking differs=true",
    "local: default=default think=claude-opus-thinking differs=true",
    "cheap: default=default-model think=think-model differs=true",
    "fast: default=default-model think=think-model differs=true",
]
